Set hidden item's padding to zero This prevents the bottom of the page filling with whitespace

--- a/src/main/resources/static/css/animation.css
+++ b/src/main/resources/static/css/animation.css
@@ -10,6 +10,7 @@
 	visibility: hidden;
 	margin-top: 0;
 	margin-bottom: 0;
+	padding: 0;
 }
 
 ul.hidden {
